aggiunta nav base

--- a/index.html
+++ b/index.html
@@ -10,38 +10,43 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="container-fluid bg-header">
-        <div class="container p-3 ">
-            gigi
+    <div class="container-fluid bg-header position-fixed top-0">
+        <div class="container p-3 text-white">
+            <div class="d-flex justify-content-between align-items-center">
+                <h3>START BOOTSTRAP</h3>
+                <div class="hamburger-border">
+                    <i class="fa-solid fa-2x fa-bars"></i>
+                </div>
+            </div>
         </div> 
     </div>
-    <div class="container-fluid bg-title">
-        <div class="container p-3 ">
+    <div class="container-fluid title-section bg-title">
+        <div class="container p-3 text-white">
             gigi
         </div> 
     </div>
     <div class="container-fluid">
-        <div class="container p-3 ">
+        <div class="container p-3">
             gigi
         </div> 
     </div>
     <div class="container-fluid bg-title">
-        <div class="container p-3 ">
+        <div class="container p-3 text-white">
             gigi
         </div> 
     </div>
     <div class="container-fluid ">
-        <div class="container p-3 ">
+        <div class="container p-3">
             gigi
         </div> 
     </div>
     <div class="container-fluid bg-pub">
-        <div class="container p-3 ">
+        <div class="container p-3 text-white">
             gigi
         </div> 
     </div>
     <div class="container-fluid bg-header">
-        <div class="container p-3 ">
+        <div class="container p-3 text-white">
             gigi
         </div> 
     </div>
