aggiunta nav bar responsive

--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
         <div class="container p-3 text-white">
             <div class="d-flex justify-content-between align-items-center">
                 <h3>START BOOTSTRAP</h3>
-                <div class="hamburger-border">
+                <div class="d-none d-sm-block">
+                    <ul class="d-flex list mt-2">
+                        <li><a href="">PORTFOLIO</a></li>
+                        <li><a href="">ABOUT</a></li>
+                        <li><a href="">CONTACT</a></li>
+                    </ul>
+                </div>
+                <div class="hamburger-border d-sm-none">
                     <i class="fa-solid fa-2x fa-bars"></i>
                 </div>
             </div>
