--- a/index.html
+++ b/index.html
@@ -14,22 +14,32 @@
         <div class="container p-3 text-white">
             <div class="d-flex justify-content-between align-items-center">
                 <h3>START BOOTSTRAP</h3>
-                <div class="d-none d-sm-block">
-                    <ul class="d-flex list mt-2">
+                <div class="d-none d-md-block">
+                    <ul class="d-flex list mt-1">
                         <li><a href="">PORTFOLIO</a></li>
                         <li><a href="">ABOUT</a></li>
                         <li><a href="">CONTACT</a></li>
                     </ul>
                 </div>
-                <div class="hamburger-border d-sm-none">
+                <div class="hamburger-border d-md-none">
                     <i class="fa-solid fa-2x fa-bars"></i>
                 </div>
             </div>
         </div> 
     </div>
     <div class="container-fluid title-section bg-title">
-        <div class="container p-3 text-white">
-            gigi
+        <div class="container py-5 text-white">
+            <div class="d-flex flex-column gap-4 justify-content-center align-items-center">
+                <img class="avatar" src="img/avatar.svg" alt="">
+                <h1 class="title">START BOOTSTRAP</h1>
+                <div class="d-flex gap-2">
+                    <div class="line"></div>
+                    <i class="fa-solid fa-2x fa-star"></i>
+                    <div class="line"></div>
+                </div>
+                <h4 class="text-uppercase text-center">Graphic artist-web designer- illustrator</h4>
+            </div>
+            
         </div> 
     </div>
     <div class="container-fluid">
