--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="container-fluid bg-header position-fixed top-0">
+    <div class="container-fluid header bg-header position-fixed top-0">
         <div class="container p-3 text-white">
             <div class="d-flex justify-content-between align-items-center">
                 <h3>START BOOTSTRAP</h3>
@@ -33,9 +33,9 @@
                 <img class="avatar" src="img/avatar.svg" alt="">
                 <h1 class="title">START BOOTSTRAP</h1>
                 <div class="d-flex gap-2">
-                    <div class="line"></div>
+                    <div class="line bg-white"></div>
                     <i class="fa-solid fa-2x fa-star"></i>
-                    <div class="line"></div>
+                    <div class="line bg-white"></div>
                 </div>
                 <h4 class="text-uppercase text-center">Graphic artist-web designer- illustrator</h4>
             </div>
@@ -44,12 +44,92 @@
     </div>
     <div class="container-fluid">
         <div class="container p-3">
-            gigi
+            <div class="d-flex flex-column justify-content-center align-items-center color-header gap-2 pt-5 pb-3">
+                <h2 class="text-uppercase">portfolio</h2>
+                <div class="d-flex gap-2">
+                    <div class="line bg-header"></div>
+                    <i class="fa-solid fa-2x fa-star"></i>
+                    <div class="line bg-header"></div>
+                </div>
+            </div>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
+                <div class="col">
+                    <div class="card card-style">
+                        <img src="img/cabin.png" class="card-img-top borded" alt="">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card card-style">
+                        <img src="img/cake.png" class="card-img-topcard-style borded" alt="">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card card-style">
+                        <img src="img/circus.png" class="card-img-top borded" alt="">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card card-style">
+                        <img src="img/game.png" class="card-img-top borded" alt="">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card card-style">
+                        <img src="img/safe.png" class="card-img-top borded" alt="">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card card-style">
+                        <img src="img/submarine.png" class="card-img-top borded" alt="">
+                    </div>
+                </div>
+            </div>
         </div> 
     </div>
-    <div class="container-fluid bg-title">
-        <div class="container p-3 text-white">
-            gigi
+    <div class="container-fluid bg-title pb-5">
+        <div class="container p-3  text-white">
+            <div class="d-flex flex-column justify-content-center align-items-center color-header gap-2 pt-5 pb-3 text-white">
+                <h1 class="text-uppercase">about</h1>
+                <div class="d-flex gap-1">
+                    <div class="line line-small bg-white"></div>
+                    <i class="fa-solid fa-2x fa-star"></i>
+                    <div class="line line-small bg-white"></div>
+                </div>
+            </div>
+            <div class="container px-5">
+                <div class="row gap-3 flex-column flex-md-row align-items-center align-items-md-start">
+                    <div class="col-9 col-md">
+                        <p>
+                            Freelancer is a free bootstrap
+                            theme created by Start Bootstrap.
+                            The download includes the
+                            complete source files including
+                            HTML, CSS, and JavaScript as
+                            well as optional LESS stylesheets
+                            for easy customization.
+                        </p>
+                    </div>
+                    <div class="col-9 col-md">
+                        <p>
+                            Whether you're a student looking
+                            to showcase your work, a
+                            professional looking to attract
+                            clients, or a graphic artist looking
+                            to share your projects, this
+                            template is the perfect starting
+                            point!                        
+                        </p>
+                    </div>
+                    
+                    <div class="text-center">
+                        <a class="btn btn-outline-light" href="">
+                            <i class="fa-solid fa-download"></i>
+                            <span>Download</span>
+                        </a>
+                    </div>
+                    
+                </div>
+            </div>
         </div> 
     </div>
     <div class="container-fluid ">
