--- a/index.html
+++ b/index.html
@@ -134,7 +134,43 @@
     </div>
     <div class="container-fluid ">
         <div class="container p-3">
-            gigi
+            <div class="d-flex flex-column justify-content-center align-items-center color-header gap-2 pt-5 pb-3">
+                <h1 class="text-uppercase">contact me</h1>
+                <div class="d-flex gap-1">
+                    <div class="line line-small bg-header"></div>
+                    <i class="fa-solid fa-2x fa-star"></i>
+                    <div class="line line-small bg-header"></div>
+                </div>
+            </div>
+            <div class="container px-5">
+                <div class="row flex-column align-items-center">
+                    <div class="col-9 col-md-12">
+                        <div class="border-bottom py-2">
+                            Name
+                        </div>
+                    </div>
+                    <div class="col-9 col-md-12">
+                        <div class="border-bottom py-2">
+                            E-mail address
+                        </div>
+                    </div>
+                    <div class="col-9 col-md-12">
+                        <div class="border-bottom py-2">
+                            Phone number
+                        </div>
+                    </div>
+                    <div class="col-9 col-md-12">
+                        <div class="pt-2 mb-5">
+                            Message
+                        </div>
+                    </div>
+                    <div class="col-9 col-md-12">
+                        <div class="border-top mt-5 pt-2 pb-4">
+                            <a class="btn bg-title btn-outline-light" href="">Send</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div> 
     </div>
     <div class="container-fluid bg-pub">
