--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="d-flex justify-content-between align-items-center">
                 <h3>START BOOTSTRAP</h3>
                 <div class="d-none d-md-block">
-                    <ul class="d-flex list mt-1">
+                    <ul class="d-flex list mt-2">
                         <li><a href="">PORTFOLIO</a></li>
                         <li><a href="">ABOUT</a></li>
                         <li><a href="">CONTACT</a></li>
@@ -37,7 +37,7 @@
                     <i class="fa-solid fa-2x fa-star"></i>
                     <div class="line bg-white"></div>
                 </div>
-                <h4 class="text-uppercase text-center">Graphic artist-web designer- illustrator</h4>
+                <h6 class="text-uppercase text-center">Graphic artist-web designer- illustrator</h6>
             </div>
             
         </div> 
@@ -98,7 +98,7 @@
             </div>
             <div class="container px-5">
                 <div class="row gap-3 flex-column flex-md-row align-items-center align-items-md-start">
-                    <div class="col-9 col-md">
+                    <div class="col-10 col-md">
                         <p>
                             Freelancer is a free bootstrap
                             theme created by Start Bootstrap.
@@ -109,7 +109,7 @@
                             for easy customization.
                         </p>
                     </div>
-                    <div class="col-9 col-md">
+                    <div class="col-10 col-md">
                         <p>
                             Whether you're a student looking
                             to showcase your work, a
@@ -144,27 +144,27 @@
             </div>
             <div class="container px-5">
                 <div class="row flex-column align-items-center">
-                    <div class="col-9 col-md-12">
+                    <div class="col-10 col-md-12">
                         <div class="border-bottom py-2">
                             Name
                         </div>
                     </div>
-                    <div class="col-9 col-md-12">
+                    <div class="col-10 col-md-12">
                         <div class="border-bottom py-2">
                             E-mail address
                         </div>
                     </div>
-                    <div class="col-9 col-md-12">
+                    <div class="col-10 col-md-12">
                         <div class="border-bottom py-2">
                             Phone number
                         </div>
                     </div>
-                    <div class="col-9 col-md-12">
+                    <div class=" col-md-12">
                         <div class="pt-2 mb-5">
                             Message
                         </div>
                     </div>
-                    <div class="col-9 col-md-12">
+                    <div class="col-10 col-md-12">
                         <div class="border-top mt-5 pt-2 pb-4">
                             <a class="btn bg-title btn-outline-light" href="">Send</a>
                         </div>
@@ -174,13 +174,45 @@
         </div> 
     </div>
     <div class="container-fluid bg-pub">
-        <div class="container p-3 text-white">
-            gigi
+        <div class="container pt-5 pb-2 text-white">
+            <div class="row row-cols-1 row-cols-md-3 text-center">
+                <div class="col mb-5">
+                    <h4 class="text-uppercase">Location</h4>
+                    <div>2215 John Daniel Drive Clark, MO 54243</div>
+                </div>
+                <div class="col mb-5">
+                    <h4 class="text-uppercase">Around the web</h4>
+                    <div>
+                        <div class="board">
+                            <a class="text-white" href=""><i class="fa-brands fa-facebook-f"></i></a>
+                        </div>
+                        <div class="board">
+                            <a class="text-white" href=""><i class="fa-brands fa-google-plus-g"></i></a>
+                        </div>
+                        <div class="board">
+                            <a class="text-white" href=""><i class="fa-brands fa-twitter"></i></a>
+                        </div>
+                        <div class="board">
+                            <a class="text-white" href=""><i class="fa-brands fa-linkedin-in"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <h4 class="text-uppercase">About Freelancer</h4>
+                    <p>
+                        Freelance is a free to use, open
+                        source Bootstrap theme created
+                        by <a class="color-title text-decoration-none" href="">Start Bootstrap</a>.
+                    </p>
+                </div>
+            </div>
         </div> 
     </div>
     <div class="container-fluid bg-header">
-        <div class="container p-3 text-white">
-            gigi
+        <div class="container p-3 text-white py-5">
+            <div class="text-center">
+                Copyright &#169; Your Website 2019
+            </div>
         </div> 
     </div>
 </body>
