--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                             Phone number
                         </div>
                     </div>
-                    <div class=" col-md-12">
+                    <div class="col-10 col-md-12">
                         <div class="pt-2 mb-5">
                             Message
                         </div>
