--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="d-flex justify-content-between align-items-center">
                 <h3>START BOOTSTRAP</h3>
                 <div class="d-none d-md-block">
-                    <ul class="d-flex list mt-2">
+                    <ul class="d-flex list-unstyled mt-2">
                         <li><a href="">PORTFOLIO</a></li>
                         <li><a href="">ABOUT</a></li>
                         <li><a href="">CONTACT</a></li>
