--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                     <p>
                         Freelance is a free to use, open
                         source Bootstrap theme created
-                        by <a class="text-primary text-decoration-none" href="">Start Bootstrap</a>.
+                        by <a class="text-primary text-decoration-none x" href="">Start Bootstrap</a>.
                     </p>
                 </div>
             </div>
